Fixing spellings in name

--- a/1. Training & Model Comparison.ipynb
+++ b/1. Training & Model Comparison.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Wheat Stripe Rust Disease Classification\n",
     "\n",
-    "## Traing & Model Comparison (Transfer Learning) - Optimized Models"
+    "## Training & Model Comparison (Transfer Learning) - Optimized Models"
    ]
   },
   {
@@ -3011,7 +3011,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
